Correct the alignment of buying and selling pages

--- a/frontend/src/routes/Coin.css
+++ b/frontend/src/routes/Coin.css
@@ -7,12 +7,12 @@
 }
 .coin-container .content {
     max-width: 740px;
+    margin: 1rem auto;
     display: flex;
     flex-direction: column;
     background: var(--color-warning);
     padding: var(--card-padding);
     border-radius: var(--card-border-radius);
-    margin-top: 1rem;
     box-shadow: 0rem 2rem 3rem var(--color-light);
 }
 
